# rust-libonebot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: pseudo1.rs  pseudo_of_actions.rs  pseudo_of_user_interface.rs
src/: action.rs  config.rs  event.rs  lib.rs  logger.rs  message.rs
src/action/: mod.rs
src/actions/: mod.rs
src/comm/: http.rs  http_webhook.rs  mod.rs  ws.rs  ws_reverse.rs
src/communication/: http_webhook.rs  mod.rs  ws.rs
src/communications/: http.rs  http_post.rs  mod.rs  ws.rs  ws_reverse.rs
src/event/: mod.rs
src/log/: mod.rs
