[package]
name = "libonebot"
version = "0.1.0"
authors = ["catsworld <519418441@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.40"
async-trait = "0.1.50"
dyn-clonable = "0.9.0"
futures-util = "0.3.15"
serde = "1.0.127"
thiserror = "1.0.25"
tokio = { version = "1.6.1", features = ["full"] }
tokio-tungstenite = "0.14.0"
tungstenite = "0.14.0"