[package]
name = "libonebot"
version = "0.1.0"
authors = ["catsworld <519418441@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
dyn-clonable = "0.9"
futures-util = "0.3"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.11", features = ["full"] }
tokio-tungstenite = "0.14"
tungstenite = "0.14"