[package]
name = "libonebot"
version = "0.1.0"
authors = ["catsworld <519418441@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.1"
chrono = "0.4"
dyn-clonable = "0.9"
futures = "0.3"
futures-util = "0.3"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.11", features = ["full"] }
tokio-tungstenite = "0.14"
tungstenite = "0.14"
warp = "0.3"